Work on sections

--- a/packages/stateofjs/lib/modules/outline.yml
+++ b/packages/stateofjs/lib/modules/outline.yml
@@ -11,9 +11,9 @@
   title: >
       "For each of the following JavaScript feature, please pick one of the following options:
 
-      \n- 🤷 You've never heard about it, or are not sure what it is
-      \n- ✅ You've heard about it but *haven't* used it
-      \n- 👍 You've used it in a project"
+      \n• 🤷 You've never heard about it, or are not sure what it is
+      \n• ✅ You've heard about it but *haven't* used it
+      \n• 👍 You've used it in a project"
 
 - title: Syntax
   description: The grammar of JavaScript
@@ -79,11 +79,11 @@
   title: >
       "For each of the following technology, framework, or library mentioned, please pick one of the following options:
 
-      \n- 🤷 You've never heard about it, or are not sure what it is
-      \n- ✅ You've heard about it and you *want* to learn it
-      \n- 🚫 You've heard about it, but *don't want* to learn it (or are *unsure*)
-      \n- 👍 You've used it and *want* to use it again
-      \n- 👎 You've used it but *don't* *want* to use it again"
+      \n• 🤷 You've never heard about it, or are not sure what it is
+      \n• ✅ You've heard about it and you *want* to learn it
+      \n• 🚫 You've heard about it, but *don't want* to learn it (or are *unsure*)
+      \n• 👍 You've used it and *want* to use it again
+      \n• 👎 You've used it but *don't* *want* to use it again"
 
 - title: JavaScript Flavors
   description: Languages that compile to JavaScript
