More UI improvements

--- a/packages/stateofjs/lib/modules/outline.yml
+++ b/packages/stateofjs/lib/modules/outline.yml
@@ -78,7 +78,9 @@
     - Elm
     - ClojureScript
     - PureScript
-    - other
+    - title: Other JavaScript Flavors
+      description: Other JavaScript flavors you use not mentioned in the list above
+      template: text
     - title: Overall Happiness
       description: On a scale of one (very unhappy) to five (very happy), how happy you with the current overall state of JavaScript flavors?
       template: happiness
@@ -94,7 +96,9 @@
     - Preact
     - Ember
     - Svelte
-    - other
+    - title: Other Front-end Frameworks
+      description: Other Front-end frameworks you use not mentioned in the list above
+      template: text
     - title: Overall Happiness
       description: On a scale of one (very unhappy) to five (very happy), how happy you with the current overall state of front-end frameworks?
       template: happiness
@@ -109,7 +113,9 @@
     - GraphQL
     - MobX
     - Relay
-    - other
+    - title: Other Data Layer Tools
+      description: Other data layer tools you use not mentioned in the list above
+      template: text
     - title: Overall Happiness
       description: On a scale of one (very unhappy) to five (very happy), how happy you with the current overall state of data layer technologies?
       template: happiness
@@ -127,7 +133,9 @@
     - FeathersJS
     - Nuxt.js
     - Gatsby.js
-    - other
+    - title: Other Back-end Frameworks
+      description: Other back-end frameworks you use not mentioned in the list above
+      template: text
     - title: Overall Happiness
       description: On a scale of one (very unhappy) to five (very happy), how happy you with the current overall state of back-end frameworks?
       template: happiness
@@ -145,7 +153,9 @@
     - Ava
     - Jasmine
     - Puppeteer
-    - other
+    - title: Other Testing Tools
+      description: Other testing tools you use not mentioned in the list above
+      template: text
     - title: Overall Happiness
       description: On a scale of one (very unhappy) to five (very happy), how happy you with the current overall state of testing tools?
       template: happiness
@@ -162,7 +172,9 @@
     - Ionic
     - NW.js
     - Expo
-    - other
+    - title: Other Mobile & Desktop Tools
+      description: Other mobile & desktop tools you use not mentioned in the list above
+      template: text
     - title: Overall Happiness
       description: On a scale of one (very unhappy) to five (very happy), how happy you with the current overall state of testing tools?
       template: happiness
@@ -467,3 +479,5 @@
     - title: Your Email
       description: If you'd like to be notified when survey results are available. Your email won't be used for any other purpose.
       template: email
+      isprivate: true
+      searchable: true
