--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@apollo/react-hooks": "3.1.2",
     "@babel/runtime": "^7.1.2",
+    "@sentry/browser": "^5.9.1",
+    "@sentry/node": "5.9.0",
     "@types/react": "^16.9.5",
     "analytics-node": "^2.1.1",
     "apollo-cache": "^1.3.2",
