various upgrades and fixes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Vulcan",
-  "version": "1.14.0",
+  "version": "1.16.0",
   "engines": {
     "npm": "^3.0"
   },
@@ -13,135 +13,143 @@
     "deploy": "DEPLOY_HOSTNAME=us-east-1.galaxy-deploy.meteor.com meteor deploy survey.stateofjs.com --settings settings-production.json"
   },
   "dependencies": {
-    "@apollo/react-hooks": "3.1.2",
-    "@babel/runtime": "^7.1.2",
-    "@sentry/browser": "^5.9.1",
-    "@sentry/node": "5.9.0",
-    "@types/react": "^16.9.5",
-    "analytics-node": "^2.1.1",
-    "apollo-cache": "^1.3.2",
-    "apollo-cache-inmemory": "^1.6.3",
-    "apollo-client": "^2.6.4",
+    "@apollo/client": "^3.2.1",
+    "@apollo/react-hoc": "^4.0.0",
+    "@babel/runtime": "^7.11.2",
+    "@sentry/browser": "^5.24.2",
+    "@sentry/node": "5.24.2",
+    "@sgrove/onegraph-apollo-server-auth": "^2.0.3-alpha-2",
+    "@types/react": "^16.9.49",
+    "analytics-node": "3.4.0-beta.2",
+    "apollo-cache": "^1.3.5",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
     "apollo-engine": "^1.1.2",
     "apollo-errors": "^1.9.0",
-    "apollo-link": "^1.2.12",
-    "apollo-link-error": "^1.1.11",
-    "apollo-link-http": "^1.5.15",
-    "apollo-link-schema": "^1.2.3",
+    "apollo-link": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-schema": "^1.2.5",
     "apollo-link-state": "^0.4.2",
-    "apollo-server": "2.8.2",
-    "apollo-server-express": "2.8.2",
-    "apollo-utilities": "^1.3.2",
+    "apollo-server": "2.18.1",
+    "apollo-server-express": "2.18.1",
+    "apollo-utilities": "^1.3.4",
     "babel-runtime": "^6.26.0",
-    "bcrypt": "^3.0.0",
-    "body-parser": "^1.18.3",
-    "bowser": "^2.7.0",
-    "chalk": "2.2.0",
-    "classnames": "^2.2.3",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "body-parser-graphql": "^1.1.0",
+    "bowser": "^2.11.0",
+    "chalk": "4.1.0",
+    "classnames": "^2.2.6",
     "combined-stream2": "^1.1.2",
-    "compression": "^1.7.2",
-    "cookie-parser": "^1.4.3",
-    "cross-fetch": "^0.0.8",
-    "crypto-js": "^3.1.9-1",
-    "css-loader": "^2.1.0",
-    "dataloader": "^1.4.0",
-    "deepmerge": "^1.2.0",
-    "dot-object": "^1.7.0",
-    "escape-string-regexp": "^1.0.5",
-    "express": "^4.16.4",
-    "flat": "^4.0.0",
-    "graphql": "14.4.2",
-    "graphql-anywhere": "4.1.13",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "cross-fetch": "^3.0.6",
+    "crypto-js": "^4.0.0",
+    "css-loader": "^4.3.0",
+    "dataloader": "^2.0.0",
+    "deepmerge": "^4.2.2",
+    "dot-object": "^2.1.4",
+    "escape-string-regexp": "^4.0.0",
+    "express": "^4.17.1",
+    "flat": "^5.0.2",
+    "graphql": "15.3.0",
+    "graphql-anywhere": "4.2.7",
     "graphql-date": "^1.0.3",
-    "graphql-tag": "^2.9.2",
-    "graphql-tools": "^4.0.4",
-    "graphql-type-json": "^0.1.4",
-    "graphql-voyager": "^1.0.0-rc.26",
-    "handlebars": "^4.4.3",
-    "he": "^1.1.1",
-    "history": "^3.0.0",
-    "html-to-text": "^2.1.0",
-    "immutability-helper": "^2.7.0",
+    "graphql-tag": "^2.11.0",
+    "graphql-tools": "^6.2.3",
+    "graphql-type-json": "^0.3.2",
+    "graphql-voyager": "1.0.0-rc.31",
+    "handlebars": "^4.7.6",
+    "he": "^1.2.0",
+    "history": "^5.0.0",
+    "html-to-text": "^5.1.1",
+    "immutability-helper": "^3.1.1",
     "import": "0.0.6",
-    "intl": "^1.2.4",
-    "intl-locales-supported": "^1.0.0",
-    "js-yaml": "^3.13.1",
-    "juice": "^5.1.0",
-    "lodash": "^4.17.15",
-    "mailchimp": "^1.1.6",
-    "marked": "^0.7.0",
-    "meteor-node-stubs": "^0.4.1",
-    "mingo": "^0.8.1",
-    "moment": "^2.13.0",
-    "node-sass": "^4.11.0",
+    "intl": "^1.2.5",
+    "intl-locales-supported": "^1.8.12",
+    "js-yaml": "^3.14.0",
+    "jsonwebtoken": "^8.5.1",
+    "juice": "^7.0.0",
+    "jwks-rsa": "^1.10.1",
+    "lodash": "^4.17.20",
+    "mailchimp": "^1.2.1",
+    "marked": "^1.1.1",
+    "meteor-node-stubs": "^1.0.1",
+    "mingo": "^3.0.6",
+    "moment": "^2.29.0",
+    "moment-timezone": "^0.5.31",
+    "node-cache": "^5.1.2",
+    "node-sass": "^4.14.1",
     "pluralize": "^8.0.0",
-    "prop-types": "^15.6.0",
-    "qs": "^6.6.0",
-    "react": "^16.10.2",
-    "react-addons-pure-render-mixin": "^15.4.1",
-    "react-apollo": "^3.1.2",
-    "react-bootstrap": "1.0.0-beta.5",
-    "react-cookie": "^2.1.6",
-    "react-datetime": "^2.11.1",
-    "react-dom": "^16.10.2",
-    "react-dropzone": "^8.1.0",
-    "react-helmet": "^5.2.1",
-    "react-intl": "^2.1.3",
-    "react-loadable": "^4.0.3",
-    "react-markdown": "^3.1.5",
-    "react-overlays": "^1.0.0-beta.17",
-    "react-places-autocomplete": "^5.0.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^5.0.1",
+    "prop-types": "^15.7.2",
+    "qs": "^6.9.4",
+    "react": "^16.13.1",
+    "react-addons-pure-render-mixin": "^15.6.2",
+    "react-bootstrap": "1.3.0",
+    "react-bootstrap-typeahead": "^5.1.1",
+    "react-cookie": "^4.0.3",
+    "react-datetime": "^3.0.4",
+    "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
+    "react-helmet": "^6.1.0",
+    "react-intl": "^5.8.2",
+    "react-loadable": "^5.5.0",
+    "react-markdown": "^4.3.1",
+    "react-overlays": "^4.1.0",
+    "react-places-autocomplete": "^7.3.0",
+    "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
     "react-router-bootstrap": "0.25.0",
-    "react-router-dom": "^5.0.1",
-    "react-select": "^1.2.1",
-    "react-stripe-checkout": "^2.4.0",
-    "react-syntax-highlighter": "^6.1.2",
-    "recompose": "^0.26.0",
-    "redux": "^3.6.0",
-    "rss": "^1.2.1",
-    "sanitize-html": "^1.16.3",
-    "sass-loader": "^7.1.0",
-    "simpl-schema": "^1.4.2",
-    "speakingurl": "^9.0.0",
-    "storybook-addon-intl": "^2.3.2",
-    "stripe": "^4.23.1",
-    "style-loader": "^0.23.1",
-    "styled-components": "^2.1.1",
-    "tracker-component": "^1.3.14",
-    "underscore": "^1.8.3",
-    "universal-cookie-express": "^2.1.5",
+    "react-router-dom": "^5.2.0",
+    "react-select": "^3.1.0",
+    "react-stripe-checkout": "^2.6.3",
+    "react-syntax-highlighter": "^13.5.3",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.5",
+    "rss": "^1.2.2",
+    "sanitize-html": "^2.0.0",
+    "sass-loader": "^10.0.2",
+    "simpl-schema": "^1.10.1",
+    "speakingurl": "^14.0.1",
+    "storybook-addon-intl": "^2.4.1",
+    "string-similarity": "^4.0.2",
+    "stripe": "^8.100.0",
+    "style-loader": "^1.2.1",
+    "styled-components": "^5.2.0",
+    "tracker-component": "^1.3.21",
+    "underscore": "^1.11.0",
+    "universal-cookie-express": "^4.0.3",
     "url": "^0.11.0"
   },
   "private": true,
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-actions": "5.0.8",
-    "@storybook/addon-knobs": "5.0.8",
-    "@storybook/addon-links": "5.0.8",
-    "@storybook/addons": "5.0.1",
-    "@storybook/react": "5.0.8",
-    "@storybook/theming": "5.0.8",
-    "autoprefixer": "^6.3.6",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "eslint": "^3.10.1",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-config-meteor": "0.0.9",
-    "eslint-import-resolver-meteor": "^0.3.3",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-meteor": "^4.2.1",
-    "eslint-plugin-react": "^6.7.1",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@storybook/addon-actions": "6.0.21",
+    "@storybook/addon-knobs": "6.0.21",
+    "@storybook/addon-links": "6.0.21",
+    "@storybook/addons": "6.0.21",
+    "@storybook/react": "6.0.21",
+    "@storybook/theming": "6.0.21",
+    "autoprefixer": "^10.0.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-meteor": "0.1.1",
+    "eslint-import-resolver-meteor": "^0.4.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-meteor": "^7.2.0",
+    "eslint-plugin-react": "^7.21.2",
     "scrap-meteor-loader": "0.0.1",
-    "storybook-react-router": "^1.0.5",
+    "storybook-react-router": "^1.0.8",
     "vulcan-loader": "0.0.1",
-    "webpack": "4.28.4"
+    "webpack": "4.44.2"
   },
   "postcss": {
     "plugins": {
